# Automation_with_Agent

./: CHANGELOG.md  Makefile  README.md  demo.py  pyproject.toml  requirements.txt  setup.py  test_di_basic.py
.github/workflows/: ci.yml  deploy.yml  docker-publish.yml
ai_automation_framework/agents/: __init__.py  memory_store.py  persistent_agent.py
ai_automation_framework/core/: __init__.py  async_utils.py  base.py  di.py  result.py  security.py  settings.py  token_budget.py  tool_interface.py  tool_registry.py  utils.py  validation.py
ai_automation_framework/integrations/: airflow_integration.py  cloud_services.py  n8n_integration.py  n8n_integration_enhanced.py  zapier_integration.py  zapier_integration_enhanced.py
ai_automation_framework/llm/: __init__.py  gemini_client.py
ai_automation_framework/rag/: __init__.py  advanced_retriever.py
ai_automation_framework/tools/: advanced_automation.py  data_processing.py  devops_cloud.py  media_messaging.py  performance_monitoring.py  scheduler_and_testing.py  video_processing.py  websocket_server.py
docs/: 10_AGENT_OPTIMIZATION_ANALYSIS.md
docs/internal/: AGENT10_SUMMARY.md  DEPENDENCY_AUDIT_REPORT.md  FEATURE_SUMMARY.md  METRICS_DOCUMENTATION.md  METRICS_SUMMARY.txt  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_QUICK_REFERENCE.md  PLUGIN_QUICKSTART.md  PROJECT_IMPROVEMENT_ANALYSIS.md  QUICK_START_SCALABILITY.md  README.md  SCALABILITY_IMPROVEMENTS.md  SECURITY_FIXES.md  TOOL_SYSTEM_SUMMARY.md  VALIDATION_QUICKSTART.md  VERIFICATION_REPORT.md  VERIFICATION_REPORT_UPDATED.md
examples/: di_container_example.py
scripts/internal/: README.md  analyze_imports.py  check_dependencies.py  final_dependency_check.py  validation_real_world_examples.py  verify_project.py
tests/: test_core_async_utils.py  test_core_health.py  test_core_middleware.py  test_core_plugins.py  test_core_security.py  test_core_task_queue.py  test_integrations.py  test_tools_calculator.py  test_tools_graphql.py  test_tools_performance.py  test_workflows.py
